Implemented premias and products

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Economist subscriptions admin UI based on coreUI">
   <meta name="author" content="Vladislavs Silins">
   <meta name="keyword" content="">
-  <title>"The Economist Admin UI"</title>
+  <title>"The Economist" Admin UI</title>
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
